// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Liquid Javascript Test AdvancedRef 1`] = `
"<div>
  {% if showInput %}
  <div>
    <input class=\\"input\\" value=\\"{{name}}\\" />

    <label for=\\"cars\\">Choose a car:</label>

    <select name=\\"cars\\" id=\\"cars\\">
      <option value=\\"supra\\">GR Supra</option>

      <option value=\\"86\\">GR 86</option>
    </select>
  </div>
  {% endif %} Hello ! I can run in React, Qwik, Vue, Solid, or Web Component!
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Javascript Test Basic 1`] = `
"<div class=\\"test div\\">
  <input />

  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Javascript Test Basic Context 1`] = `
"<div>
  Hello! I can run in React, Vue, Solid, or Liquid!

  <input />
</div>
"
`;

exports[`Liquid Javascript Test Basic OnMount Update 1`] = `
"<div>Hello {{name}}</div>
"
`;

exports[`Liquid Javascript Test Basic Outputs 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test Basic Outputs Meta 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test BasicBooleanAttribute 1`] = `
"<div>
  {{children}} {{type}}

  <MyBooleanAttributeComponent toggle=\\"{{true}}\\"></MyBooleanAttributeComponent>

  <MyBooleanAttributeComponent toggle=\\"{{true}}\\"></MyBooleanAttributeComponent>

  <MyBooleanAttributeComponent list=\\"{{null}}\\"></MyBooleanAttributeComponent>
</div>
"
`;

exports[`Liquid Javascript Test BasicChildComponent 1`] = `
"<div>
  <MyBasicComponent id=\\"{{dev}}\\"></MyBasicComponent>

  <div>
    <MyBasicOnMountUpdateComponent
      hi=\\"{{name}}\\"
      bye=\\"{{dev}}\\"
    ></MyBasicOnMountUpdateComponent>
  </div>
</div>
"
`;

exports[`Liquid Javascript Test BasicFor 1`] = `
"<div>
  {% for person in names %}
  <div>
    <input value=\\"{{name}}\\" />

    Hello {{person}} ! I can run in Qwik, Web Component, React, Vue, Solid, or
    Liquid!
  </div>
  {% endfor %}
</div>
"
`;

exports[`Liquid Javascript Test BasicRef 1`] = `
"<div>
  {% if showInput %}
  <div>
    <input class=\\"input\\" value=\\"{{name}}\\" />

    <label for=\\"cars\\">Choose a car:</label>

    <select name=\\"cars\\" id=\\"cars\\">
      <option value=\\"supra\\">GR Supra</option>

      <option value=\\"86\\">GR 86</option>
    </select>
  </div>
  {% endif %} Hello ! I can run in React, Qwik, Vue, Solid, or Web Component!
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Javascript Test BasicRefAssignment 1`] = `
"<div>
  <button>Click</button>
</div>
"
`;

exports[`Liquid Javascript Test BasicRefPrevious 1`] = `
"<div>
  <h1>Now: {{count}} , before: {{prevCount}}</h1>

  <button>Increment</button>
</div>
"
`;

exports[`Liquid Javascript Test Button 1`] = `
"<div>
  {% if link %}

  <a props.attributes=\\"{{attributes}}\\" href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Javascript Test Columns 1`] = `
"<div class=\\"builder-columns div\\">
  {% for column in columns %}
  <div class=\\"builder-column div-2\\">{{column.content}} {{index}}</div>
  {% endfor %}
</div>
<style>
  .div {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    line-height: normal;
  }
  @media (max-width: 999px) {
    .div {
      flex-direction: row;
    }
  }
  @media (max-width: 639px) {
    .div {
      flex-direction: row-reverse;
    }
  }
  .div-2 {
    flex-grow: 1;
  }
</style>
"
`;

exports[`Liquid Javascript Test ContentSlotHtml 1`] = `
"<div>
  <slot name=\\"{{slotTesting}}\\"></slot>

  <div>
    <hr />
  </div>

  <div>
    <slot></slot>
  </div>
</div>
"
`;

exports[`Liquid Javascript Test ContentSlotJSX 1`] = `
"<div>
  {% if slotTesting %}

  <div>{{slotTesting}}</div>

  {% endif %}

  <div>
    <hr />
  </div>

  <div>{{children}}</div>
</div>
"
`;

exports[`Liquid Javascript Test CustomCode 1`] = `
"<div innerHTML=\\"{{code}}\\"></div>
"
`;

exports[`Liquid Javascript Test Embed 1`] = `
"<div innerHTML=\\"{{code}}\\"></div>
"
`;

exports[`Liquid Javascript Test Form 1`] = `
"<form
  validate=\\"{{validate}}\\"
  method=\\"{{method}}\\"
  name=\\"{{name}}\\"
  props.attributes=\\"{{attributes}}\\"
></form>
<style>
  .pre {
    padding: 10px;
    color: red;
    text-align: center;
  }
</style>
"
`;

exports[`Liquid Javascript Test Image 1`] = `
"<div>
  <picture>
    <source srcset=\\"{{srcset}}\\" />
  </picture>

  {{children}}
</div>
<style>
  .img {
    opacity: 1;
    transition: opacity 0.2s ease-in-out;
    object-fit: cover;
    object-position: center;
  }
</style>
"
`;

exports[`Liquid Javascript Test Image State 1`] = `
"<div>
  {% for item in images %}
  <div>
    <img class=\\"custom-class\\" src=\\"{{item}}\\" key=\\"{{itemIndex}}\\" />
  </div>
  {% endfor %}
</div>
"
`;

exports[`Liquid Javascript Test Img 1`] = `
"<img props.attributes=\\"{{attributes}}\\" alt=\\"{{altText}}\\" src=\\"{{imgSrc}}\\" />
"
`;

exports[`Liquid Javascript Test Input 1`] = `
"<input
  props.attributes=\\"{{attributes}}\\"
  placeholder=\\"{{placeholder}}\\"
  type=\\"{{type}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  required=\\"{{required}}\\"
/>
"
`;

exports[`Liquid Javascript Test RawText 1`] = `
"<span></span>
"
`;

exports[`Liquid Javascript Test Section 1`] = `
"<section props.attributes=\\"{{attributes}}\\">{{children}}</section>
"
`;

exports[`Liquid Javascript Test Select 1`] = `
"<select
  props.attributes=\\"{{attributes}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  name=\\"{{name}}\\"
>
  {% for option in options %}
  <option value=\\"{{option.value}}\\" data-index=\\"{{index}}\\"></option>
  {% endfor %}
</select>
"
`;

exports[`Liquid Javascript Test SlotHtml 1`] = `
"<div>
  <ContentSlotCode>
    <slot></slot>
  </ContentSlotCode>
</div>
"
`;

exports[`Liquid Javascript Test SlotJsx 1`] = `
"<div>
  <ContentSlotCode></ContentSlotCode>
</div>
"
`;

exports[`Liquid Javascript Test Stamped.io 1`] = `
"<div data-user=\\"{{name}}\\">
  <button>Write a review</button>

  {% if showReviewPrompt %}

  <input placeholder=\\"Email\\" />

  <input placeholder=\\"Title\\" class=\\"input\\" />

  <textarea placeholder=\\"How was your experience?\\" class=\\"textarea\\"></textarea>

  <button class=\\"button\\">Submit</button>

  {% endif %} {% for review in reviews %}
  <div class=\\"review\\" key=\\"{{review.id}}\\">
    <img class=\\"img\\" src=\\"{{review.avatar}}\\" />

    <div>
      <div>N: {{index}}</div>

      <div>{{review.author}}</div>

      <div>{{review.reviewMessage}}</div>
    </div>
  </div>
  {% endfor %}
</div>
<style>
  .input {
    display: block;
  }
  .textarea {
    display: block;
  }
  .button {
    display: block;
  }
  .review {
    margin: 10px;
    padding: 10px;
    background: white;
    display: flex;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
  .img {
    height: 30px;
    width: 30px;
    margin-right: 10px;
  }
</style>
"
`;

exports[`Liquid Javascript Test Submit 1`] = `
"<button type=\\"submit\\" props.attributes=\\"{{attributes}}\\">{{text}}</button>
"
`;

exports[`Liquid Javascript Test Text 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test Textarea 1`] = `
"<textarea
  props.attributes=\\"{{attributes}}\\"
  placeholder=\\"{{placeholder}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
></textarea>
"
`;

exports[`Liquid Javascript Test Video 1`] = `
"<video
  preload=\\"none\\"
  props.attributes=\\"{{attributes}}\\"
  poster=\\"{{posterImage}}\\"
  autoplay=\\"{{autoPlay}}\\"
  muted=\\"{{muted}}\\"
  controls=\\"{{controls}}\\"
  loop=\\"{{loop}}\\"
></video>
"
`;

exports[`Liquid Javascript Test basicForwardRef 1`] = `
"<div>
  <input class=\\"input\\" value=\\"{{name}}\\" />
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Javascript Test basicForwardRefMetadata 1`] = `
"<div>
  <input class=\\"input\\" value=\\"{{name}}\\" />
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Javascript Test basicOnUpdateReturn 1`] = `
"<div>Hello! {{name}}</div>
"
`;

exports[`Liquid Javascript Test class + ClassName + css 1`] = `
"<div class=\\"test2 test div\\">
  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Javascript Test class + css 1`] = `
"<div class=\\"test div\\">Hello! I can run in React, Vue, Solid, or Liquid!</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Javascript Test className + css 1`] = `
"<div class=\\"test div\\">Hello! I can run in React, Vue, Solid, or Liquid!</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Javascript Test className 1`] = `
"<div>
  <div class=\\"no binding\\">Without Binding</div>

  <div class=\\"{{bindings}}\\">With binding</div>
</div>
"
`;

exports[`Liquid Javascript Test classState 1`] = `
"<div style=\\"{{styleState}}\\">
  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Javascript Test defaultProps 1`] = `
"<div>
  {% if link %}

  <a props.attributes=\\"{{attributes}}\\" href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Javascript Test defaultValsWithTypes 1`] = `
"<div>Hello</div>
"
`;

exports[`Liquid Javascript Test import types 1`] = `
"<RenderBlock></RenderBlock>
"
`;

exports[`Liquid Javascript Test multipleOnUpdate 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test multipleOnUpdateWithDeps 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test multipleSpreads 1`] = `
"<input attrs=\\"{{attrs}}\\" props=\\"{{props}}\\" />
"
`;

exports[`Liquid Javascript Test nestedShow 1`] = `
"{% if conditionA %} {% endif %}
"
`;

exports[`Liquid Javascript Test nestedStyles 1`] = `
"<div class=\\"div\\">Hello world</div>
<style>
  .div {
    display: flex;
    foo: var(--bar);
  }
  @media (max-width: env(--mobile)) {
    .div {
      display: block;
    }
  }
  .div:hover {
    display: flex;
  }
  .div .nested-selector {
    display: grid;
  }
</style>
"
`;

exports[`Liquid Javascript Test onInit & onMount 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test onInit 1`] = `
"<div>Default name defined by parent {{name}}</div>
"
`;

exports[`Liquid Javascript Test onMount 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test onUpdate 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test onUpdateWithDeps 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test preserveExportOrLocalStatement 1`] = `
"<div></div>
"
`;

exports[`Liquid Javascript Test preserveTyping 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid Javascript Test propsDestructure 1`] = `
"<div>
  {{children}} {{type}} Hello! I can run in React, Vue, Solid, or Liquid!
</div>
"
`;

exports[`Liquid Javascript Test propsInterface 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid Javascript Test propsType 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid Javascript Test rootFragmentMultiNode 1`] = `
"<div>
  {% if link %}

  <a props.attributes=\\"{{attributes}}\\" href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Javascript Test rootShow 1`] = `""`;

exports[`Liquid Javascript Test self-referencing component 1`] = `
"<div>{{name}}</div>
"
`;

exports[`Liquid Javascript Test self-referencing component with children 1`] = `
"<div>{{name}} {{children}}</div>
"
`;

exports[`Liquid Javascript Test showWithFor 1`] = `
"{% if conditionA %} {% for item in items %}
<div key=\\"{{idx}}\\">{{item}}</div>
{% endfor %} {% endif %}
"
`;

exports[`Liquid Javascript Test spreadAttrs 1`] = `
"<input attrs=\\"{{attrs}}\\" />
"
`;

exports[`Liquid Javascript Test spreadNestedProps 1`] = `
"<input props.nested=\\"{{nested}}\\" />
"
`;

exports[`Liquid Javascript Test spreadProps 1`] = `
"<input props=\\"{{props}}\\" />
"
`;

exports[`Liquid Javascript Test subComponent 1`] = `
"<Foo></Foo>
"
`;

exports[`Liquid Javascript Test typeDependency 1`] = `
"<div>{{foo}}</div>
"
`;

exports[`Liquid Javascript Test use-style 1`] = `
"<button type=\\"button\\">Button</button>
<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>
"
`;

exports[`Liquid Javascript Test use-style-and-css 1`] = `
"<button type=\\"button\\" class=\\"button\\">Button</button>
<style>
  .button {
    background: blue;
    color: white;
  }

  button {
    font-size: 12px;
    outline: 1px solid black;
  }
</style>
"
`;

exports[`Liquid Javascript Test use-style-outside-component 1`] = `
"<button type=\\"button\\">Button</button>
<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>
"
`;

exports[`Liquid Remove Internal mitosis package 1`] = `
"<div>Hello {{name}} ! I can run in React, Qwik, Vue, Solid, or Liquid!</div>
"
`;

exports[`Liquid Typescript Test AdvancedRef 1`] = `
"<div>
  {% if showInput %}
  <div>
    <input class=\\"input\\" value=\\"{{name}}\\" />

    <label for=\\"cars\\">Choose a car:</label>

    <select name=\\"cars\\" id=\\"cars\\">
      <option value=\\"supra\\">GR Supra</option>

      <option value=\\"86\\">GR 86</option>
    </select>
  </div>
  {% endif %} Hello ! I can run in React, Qwik, Vue, Solid, or Web Component!
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Typescript Test Basic 1`] = `
"<div class=\\"test div\\">
  <input />

  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Typescript Test Basic Context 1`] = `
"<div>
  Hello! I can run in React, Vue, Solid, or Liquid!

  <input />
</div>
"
`;

exports[`Liquid Typescript Test Basic OnMount Update 1`] = `
"<div>Hello {{name}}</div>
"
`;

exports[`Liquid Typescript Test Basic Outputs 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test Basic Outputs Meta 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test BasicBooleanAttribute 1`] = `
"<div>
  {{children}} {{type}}

  <MyBooleanAttributeComponent toggle=\\"{{true}}\\"></MyBooleanAttributeComponent>

  <MyBooleanAttributeComponent toggle=\\"{{true}}\\"></MyBooleanAttributeComponent>

  <MyBooleanAttributeComponent list=\\"{{null}}\\"></MyBooleanAttributeComponent>
</div>
"
`;

exports[`Liquid Typescript Test BasicChildComponent 1`] = `
"<div>
  <MyBasicComponent id=\\"{{dev}}\\"></MyBasicComponent>

  <div>
    <MyBasicOnMountUpdateComponent
      hi=\\"{{name}}\\"
      bye=\\"{{dev}}\\"
    ></MyBasicOnMountUpdateComponent>
  </div>
</div>
"
`;

exports[`Liquid Typescript Test BasicFor 1`] = `
"<div>
  {% for person in names %}
  <div>
    <input value=\\"{{name}}\\" />

    Hello {{person}} ! I can run in Qwik, Web Component, React, Vue, Solid, or
    Liquid!
  </div>
  {% endfor %}
</div>
"
`;

exports[`Liquid Typescript Test BasicRef 1`] = `
"<div>
  {% if showInput %}
  <div>
    <input class=\\"input\\" value=\\"{{name}}\\" />

    <label for=\\"cars\\">Choose a car:</label>

    <select name=\\"cars\\" id=\\"cars\\">
      <option value=\\"supra\\">GR Supra</option>

      <option value=\\"86\\">GR 86</option>
    </select>
  </div>
  {% endif %} Hello ! I can run in React, Qwik, Vue, Solid, or Web Component!
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Typescript Test BasicRefAssignment 1`] = `
"<div>
  <button>Click</button>
</div>
"
`;

exports[`Liquid Typescript Test BasicRefPrevious 1`] = `
"<div>
  <h1>Now: {{count}} , before: {{prevCount}}</h1>

  <button>Increment</button>
</div>
"
`;

exports[`Liquid Typescript Test Button 1`] = `
"<div>
  {% if link %}

  <a props.attributes=\\"{{attributes}}\\" href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Typescript Test Columns 1`] = `
"<div class=\\"builder-columns div\\">
  {% for column in columns %}
  <div class=\\"builder-column div-2\\">{{column.content}} {{index}}</div>
  {% endfor %}
</div>
<style>
  .div {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    line-height: normal;
  }
  @media (max-width: 999px) {
    .div {
      flex-direction: row;
    }
  }
  @media (max-width: 639px) {
    .div {
      flex-direction: row-reverse;
    }
  }
  .div-2 {
    flex-grow: 1;
  }
</style>
"
`;

exports[`Liquid Typescript Test ContentSlotHtml 1`] = `
"<div>
  <slot name=\\"{{slotTesting}}\\"></slot>

  <div>
    <hr />
  </div>

  <div>
    <slot></slot>
  </div>
</div>
"
`;

exports[`Liquid Typescript Test ContentSlotJSX 1`] = `
"<div>
  {% if slotTesting %}

  <div>{{slotTesting}}</div>

  {% endif %}

  <div>
    <hr />
  </div>

  <div>{{children}}</div>
</div>
"
`;

exports[`Liquid Typescript Test CustomCode 1`] = `
"<div innerHTML=\\"{{code}}\\"></div>
"
`;

exports[`Liquid Typescript Test Embed 1`] = `
"<div innerHTML=\\"{{code}}\\"></div>
"
`;

exports[`Liquid Typescript Test Form 1`] = `
"<form
  validate=\\"{{validate}}\\"
  method=\\"{{method}}\\"
  name=\\"{{name}}\\"
  props.attributes=\\"{{attributes}}\\"
></form>
<style>
  .pre {
    padding: 10px;
    color: red;
    text-align: center;
  }
</style>
"
`;

exports[`Liquid Typescript Test Image 1`] = `
"<div>
  <picture>
    <source srcset=\\"{{srcset}}\\" />
  </picture>

  {{children}}
</div>
<style>
  .img {
    opacity: 1;
    transition: opacity 0.2s ease-in-out;
    object-fit: cover;
    object-position: center;
  }
</style>
"
`;

exports[`Liquid Typescript Test Image State 1`] = `
"<div>
  {% for item in images %}
  <div>
    <img class=\\"custom-class\\" src=\\"{{item}}\\" key=\\"{{itemIndex}}\\" />
  </div>
  {% endfor %}
</div>
"
`;

exports[`Liquid Typescript Test Img 1`] = `
"<img props.attributes=\\"{{attributes}}\\" alt=\\"{{altText}}\\" src=\\"{{imgSrc}}\\" />
"
`;

exports[`Liquid Typescript Test Input 1`] = `
"<input
  props.attributes=\\"{{attributes}}\\"
  placeholder=\\"{{placeholder}}\\"
  type=\\"{{type}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  required=\\"{{required}}\\"
/>
"
`;

exports[`Liquid Typescript Test RawText 1`] = `
"<span></span>
"
`;

exports[`Liquid Typescript Test Section 1`] = `
"<section props.attributes=\\"{{attributes}}\\">{{children}}</section>
"
`;

exports[`Liquid Typescript Test Select 1`] = `
"<select
  props.attributes=\\"{{attributes}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  name=\\"{{name}}\\"
>
  {% for option in options %}
  <option value=\\"{{option.value}}\\" data-index=\\"{{index}}\\"></option>
  {% endfor %}
</select>
"
`;

exports[`Liquid Typescript Test SlotHtml 1`] = `
"<div>
  <ContentSlotCode>
    <slot></slot>
  </ContentSlotCode>
</div>
"
`;

exports[`Liquid Typescript Test SlotJsx 1`] = `
"<div>
  <ContentSlotCode></ContentSlotCode>
</div>
"
`;

exports[`Liquid Typescript Test Stamped.io 1`] = `
"<div data-user=\\"{{name}}\\">
  <button>Write a review</button>

  {% if showReviewPrompt %}

  <input placeholder=\\"Email\\" />

  <input placeholder=\\"Title\\" class=\\"input\\" />

  <textarea placeholder=\\"How was your experience?\\" class=\\"textarea\\"></textarea>

  <button class=\\"button\\">Submit</button>

  {% endif %} {% for review in reviews %}
  <div class=\\"review\\" key=\\"{{review.id}}\\">
    <img class=\\"img\\" src=\\"{{review.avatar}}\\" />

    <div>
      <div>N: {{index}}</div>

      <div>{{review.author}}</div>

      <div>{{review.reviewMessage}}</div>
    </div>
  </div>
  {% endfor %}
</div>
<style>
  .input {
    display: block;
  }
  .textarea {
    display: block;
  }
  .button {
    display: block;
  }
  .review {
    margin: 10px;
    padding: 10px;
    background: white;
    display: flex;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
  .img {
    height: 30px;
    width: 30px;
    margin-right: 10px;
  }
</style>
"
`;

exports[`Liquid Typescript Test Submit 1`] = `
"<button type=\\"submit\\" props.attributes=\\"{{attributes}}\\">{{text}}</button>
"
`;

exports[`Liquid Typescript Test Text 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test Textarea 1`] = `
"<textarea
  props.attributes=\\"{{attributes}}\\"
  placeholder=\\"{{placeholder}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
></textarea>
"
`;

exports[`Liquid Typescript Test Video 1`] = `
"<video
  preload=\\"none\\"
  props.attributes=\\"{{attributes}}\\"
  poster=\\"{{posterImage}}\\"
  autoplay=\\"{{autoPlay}}\\"
  muted=\\"{{muted}}\\"
  controls=\\"{{controls}}\\"
  loop=\\"{{loop}}\\"
></video>
"
`;

exports[`Liquid Typescript Test basicForwardRef 1`] = `
"<div>
  <input class=\\"input\\" value=\\"{{name}}\\" />
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Typescript Test basicForwardRefMetadata 1`] = `
"<div>
  <input class=\\"input\\" value=\\"{{name}}\\" />
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid Typescript Test basicOnUpdateReturn 1`] = `
"<div>Hello! {{name}}</div>
"
`;

exports[`Liquid Typescript Test class + ClassName + css 1`] = `
"<div class=\\"test2 test div\\">
  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Typescript Test class + css 1`] = `
"<div class=\\"test div\\">Hello! I can run in React, Vue, Solid, or Liquid!</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Typescript Test className + css 1`] = `
"<div class=\\"test div\\">Hello! I can run in React, Vue, Solid, or Liquid!</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Typescript Test className 1`] = `
"<div>
  <div class=\\"no binding\\">Without Binding</div>

  <div class=\\"{{bindings}}\\">With binding</div>
</div>
"
`;

exports[`Liquid Typescript Test classState 1`] = `
"<div style=\\"{{styleState}}\\">
  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Typescript Test defaultProps 1`] = `
"<div>
  {% if link %}

  <a props.attributes=\\"{{attributes}}\\" href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Typescript Test defaultValsWithTypes 1`] = `
"<div>Hello</div>
"
`;

exports[`Liquid Typescript Test import types 1`] = `
"<RenderBlock></RenderBlock>
"
`;

exports[`Liquid Typescript Test multipleOnUpdate 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test multipleOnUpdateWithDeps 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test multipleSpreads 1`] = `
"<input attrs=\\"{{attrs}}\\" props=\\"{{props}}\\" />
"
`;

exports[`Liquid Typescript Test nestedShow 1`] = `
"{% if conditionA %} {% endif %}
"
`;

exports[`Liquid Typescript Test nestedStyles 1`] = `
"<div class=\\"div\\">Hello world</div>
<style>
  .div {
    display: flex;
    foo: var(--bar);
  }
  @media (max-width: env(--mobile)) {
    .div {
      display: block;
    }
  }
  .div:hover {
    display: flex;
  }
  .div .nested-selector {
    display: grid;
  }
</style>
"
`;

exports[`Liquid Typescript Test onInit & onMount 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test onInit 1`] = `
"<div>Default name defined by parent {{name}}</div>
"
`;

exports[`Liquid Typescript Test onMount 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test onUpdate 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test onUpdateWithDeps 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test preserveExportOrLocalStatement 1`] = `
"<div></div>
"
`;

exports[`Liquid Typescript Test preserveTyping 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid Typescript Test propsDestructure 1`] = `
"<div>
  {{children}} {{type}} Hello! I can run in React, Vue, Solid, or Liquid!
</div>
"
`;

exports[`Liquid Typescript Test propsInterface 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid Typescript Test propsType 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid Typescript Test rootFragmentMultiNode 1`] = `
"<div>
  {% if link %}

  <a props.attributes=\\"{{attributes}}\\" href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Typescript Test rootShow 1`] = `""`;

exports[`Liquid Typescript Test self-referencing component 1`] = `
"<div>{{name}}</div>
"
`;

exports[`Liquid Typescript Test self-referencing component with children 1`] = `
"<div>{{name}} {{children}}</div>
"
`;

exports[`Liquid Typescript Test showWithFor 1`] = `
"{% if conditionA %} {% for item in items %}
<div key=\\"{{idx}}\\">{{item}}</div>
{% endfor %} {% endif %}
"
`;

exports[`Liquid Typescript Test spreadAttrs 1`] = `
"<input attrs=\\"{{attrs}}\\" />
"
`;

exports[`Liquid Typescript Test spreadNestedProps 1`] = `
"<input props.nested=\\"{{nested}}\\" />
"
`;

exports[`Liquid Typescript Test spreadProps 1`] = `
"<input props=\\"{{props}}\\" />
"
`;

exports[`Liquid Typescript Test subComponent 1`] = `
"<Foo></Foo>
"
`;

exports[`Liquid Typescript Test typeDependency 1`] = `
"<div>{{foo}}</div>
"
`;

exports[`Liquid Typescript Test use-style 1`] = `
"<button type=\\"button\\">Button</button>
<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>
"
`;

exports[`Liquid Typescript Test use-style-and-css 1`] = `
"<button type=\\"button\\" class=\\"button\\">Button</button>
<style>
  .button {
    background: blue;
    color: white;
  }

  button {
    font-size: 12px;
    outline: 1px solid black;
  }
</style>
"
`;

exports[`Liquid Typescript Test use-style-outside-component 1`] = `
"<button type=\\"button\\">Button</button>
<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>
"
`;
